--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,19 @@
     border-radius: 30px;
 }
 
+.disabled-button {
+    color: white;
+    text-transform: uppercase;
+    font-size: 15px;
+    padding: 12px 30px;
+    border: none;
+    background: linear-gradient(45deg, #eeeeee, #151414);
+    border-radius: 30px;
+    cursor: not-allowed !important;
+}
+
 .primary-button:hover {
-    background: linear-gradient(260deg, #fe3072, #4e00e6);
+    background: linear-gradient(260deg, #fe3072, #4e00e6) !important;
 
 }
 
@@ -30,4 +41,8 @@ body {
 .logo-container {
     display: flex;
     justify-content: space-between;
+}
+
+button {
+    cursor: pointer
 }
